deleted pictures not used

--- a/gallery.html
+++ b/gallery.html
@@ -134,7 +134,7 @@
           <div class="gallery-item" data-category="academic">
             <div class="gallery-image">
               <img
-                src="assets/img/science.jpg"
+                src="https://source.unsplash.com/800x600/?children,science,education"
                 alt="Science Class Experiment"
               />
               <div class="gallery-overlay">
@@ -152,7 +152,7 @@
 
           <div class="gallery-item" data-category="sports">
             <div class="gallery-image">
-              <img src="assets/img/sports.jpg" alt="Annual Sports Day" />
+              <img src="https://source.unsplash.com/800x600/?children,sports,playground" alt="Annual Sports Day" />
               <div class="gallery-overlay">
                 <div class="gallery-info">
                   <h3>Annual Sports Day</h3>
@@ -169,7 +169,7 @@
           <div class="gallery-item" data-category="cultural">
             <div class="gallery-image">
               <img
-                src="assets/img/cultural day.jpg"
+                src="https://source.unsplash.com/800x600/?children,culture,diversity"
                 alt="Cultural Day Celebration"
               />
               <div class="gallery-overlay">
@@ -188,7 +188,7 @@
           <div class="gallery-item" data-category="religious">
             <div class="gallery-image">
               <img
-                src="assets/img/first holy communion.jpg"
+                src="https://source.unsplash.com/800x600/?children,church,prayer"
                 alt="First Holy Communion"
               />
               <div class="gallery-overlay">
@@ -206,7 +206,7 @@
 
           <div class="gallery-item" data-category="field-trips">
             <div class="gallery-image">
-              <img src="assets/img/excursions.jpg" alt="Museum Field Trip" />
+              <img src="https://source.unsplash.com/800x600/?children,museum,learning" alt="Museum Field Trip" />
               <div class="gallery-overlay">
                 <div class="gallery-info">
                   <h3>Museum Field Trip</h3>
@@ -222,7 +222,7 @@
 
           <div class="gallery-item" data-category="special-days">
             <div class="gallery-image">
-              <img src="assets/img/graduate.jpg" alt="Graduation Ceremony" />
+              <img src="https://source.unsplash.com/800x600/?children,graduation,celebration" alt="Graduation Ceremony" />
               <div class="gallery-overlay">
                 <div class="gallery-info">
                   <h3>Graduation Ceremony</h3>
@@ -264,7 +264,7 @@
         <div class="events-container">
           <div class="event-card featured">
             <div class="event-image">
-              <img src="assets/img/science.jpg" alt="Annual Science Fair" />
+              <img src="https://source.unsplash.com/600x400/?children,science,education" alt="Annual Science Fair" />
               <div class="event-date">
                 <span class="day">15</span>
                 <span class="month">Mar</span>
@@ -298,7 +298,7 @@
           <div class="events-grid">
             <div class="event-card">
               <div class="event-image">
-                <img src="assets/img/sports.jpg" alt="Sports Day 2025" />
+                <img src="https://source.unsplash.com/600x400/?children,sports,playground" alt="Sports Day 2025" />
                 <div class="event-date">
                   <span class="day">22</span>
                   <span class="month">Apr</span>
@@ -326,7 +326,7 @@
 
             <div class="event-card">
               <div class="event-image">
-                <img src="assets/img/pta.jpg" alt="Parent-Teacher Conference" />
+                <img src="https://source.unsplash.com/600x400/?parents,teachers,meeting" alt="Parent-Teacher Conference" />
                 <div class="event-date">
                   <span class="day">10</span>
                   <span class="month">May</span>
@@ -353,7 +353,7 @@
             <div class="event-card">
               <div class="event-image">
                 <img
-                  src="assets/img/cultural day.jpg"
+                  src="https://source.unsplash.com/600x400/?children,culture,diversity"
                   alt="Cultural Day Celebration"
                 />
                 <div class="event-date">
@@ -382,7 +382,7 @@
 
             <div class="event-card">
               <div class="event-image">
-                <img src="assets/img/graduate.jpg" alt="Graduation Ceremony" />
+                <img src="https://source.unsplash.com/600x400/?children,graduation,celebration" alt="Graduation Ceremony" />
                 <div class="event-date">
                   <span class="day">20</span>
                   <span class="month">Jul</span>
@@ -492,7 +492,7 @@
             >
               <div class="past-event-image">
                 <img
-                  src="assets/img/literacy day.jpg"
+                  src="https://source.unsplash.com/600x400/?children,books,reading"
                   alt="World Literacy Day Celebration"
                 />
               </div>
@@ -522,7 +522,7 @@
             >
               <div class="past-event-image">
                 <img
-                  src="assets/img/Ash Wednesday.jpg"
+                  src="https://source.unsplash.com/600x400/?children,prayer,religious"
                   alt="Ash Wednesday Service"
                 />
               </div>
@@ -552,7 +552,7 @@
             >
               <div class="past-event-image">
                 <img
-                  src="assets/img/Christmas concert.jpg"
+                  src="https://source.unsplash.com/600x400/?children,christmas,celebration"
                   alt="Christmas Concert"
                 />
               </div>
@@ -582,7 +582,7 @@
             >
               <div class="past-event-image">
                 <img
-                  src="assets/img/soccer club.jpg"
+                  src="https://source.unsplash.com/600x400/?children,soccer,sports"
                   alt="Inter-School Sports Competition"
                 />
               </div>
