changed something on the welcome note

--- a/welcome.html
+++ b/welcome.html
@@ -164,7 +164,7 @@
                   <div class="signature-block">
                     <img
                       src="assets/img/signature.png"
-                      alt="Principal's Signature"
+                      alt="Provincial Superior's Signature"
                       class="signature"
                     />
                     <p>
