--- a/welcome.html
+++ b/welcome.html
@@ -64,7 +64,7 @@
             <a href="primary.html">Primary</a>
           </div>
         </div>
-        <a href="gallery.html">Gallery</a>
+        <!-- <a href="gallery.html">Gallery</a> -->
         <a href="contact.html">Contact</a>
         <a href="portal.html" class="portal-btn">Portal</a>
       </div>
