making edits to the pages

--- a/creche.html
+++ b/creche.html
@@ -66,7 +66,7 @@
             <a href="primary.html">Primary</a>
           </div>
         </div>
-        <a href="gallery.html">Gallery</a>
+        <!-- <a href="gallery.html">Gallery</a> -->
         <a href="contact.html">Contact</a>
         <a href="portal.html" class="portal-btn">Portal</a>
       </div>
@@ -772,7 +772,7 @@
                 <ul>
                   <li><a href="about.html"><i class="fas fa-angle-right"></i> About Us</a></li>
                   <li><a href="programme.html"><i class="fas fa-angle-right"></i> Our Programmes</a></li>
-                  <li><a href="gallery.html"><i class="fas fa-angle-right"></i> Gallery</a></li>
+                  <!-- <li><a href="gallery.html"><i class="fas fa-angle-right"></i> Gallery</a></li> -->
                   <li><a href="news.html"><i class="fas fa-angle-right"></i> News & Events</a></li>
                   <li><a href="contact.html"><i class="fas fa-angle-right"></i> Contact Us</a></li>
                 </ul>
