--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             <a href="curriculum.html">Curriculum</a>
           </div>
         </div>
-        <a href="gallery.html">Gallery</a>
+        <!-- <a href="gallery.html">Gallery</a> -->
         <a href="contact.html" class="active">Contact</a>
         <a href="portal.html" class="portal-btn">Portal</a>
       </div>
@@ -313,8 +313,7 @@
             <div class="faq-answer">
               <p>
                 Our school hours are from 7:30 AM to 2:30 PM, Monday through
-                Friday. We offer after-school programs until 5:00 PM for parents
-                who need extended care.
+                Friday.
               </p>
             </div>
           </div>
@@ -687,16 +686,16 @@
                     ><i class="fas fa-angle-right"></i> Our Programmes</a
                   >
                 </li>
-                <li>
+                <!-- <li>
                   <a href="gallery.html"
                     ><i class="fas fa-angle-right"></i> Gallery</a
                   >
-                </li>
-                <li>
+                </li> -->
+                <!-- <li>
                   <a href="news.html"
                     ><i class="fas fa-angle-right"></i> News & Events</a
                   >
-                </li>
+                </li> -->
                 <li>
                   <a href="contact.html"
                     ><i class="fas fa-angle-right"></i> Contact Us</a
@@ -721,17 +720,6 @@
                 <li>
                   <a href="primary.html"
                     ><i class="fas fa-angle-right"></i> Primary School</a
-                  >
-                </li>
-                <li>
-                  <a href="afterschool.html"
-                    ><i class="fas fa-angle-right"></i> After School
-                    Programme</a
-                  >
-                </li>
-                <li>
-                  <a href="holiday.html"
-                    ><i class="fas fa-angle-right"></i> Holiday Programme</a
                   >
                 </li>
               </ul>
