--- a/corevalues.html
+++ b/corevalues.html
@@ -66,7 +66,7 @@
             <a href="primary.html">Primary</a>
           </div>
         </div>
-        <a href="gallery.html">Gallery</a>
+        <!-- <a href="gallery.html">Gallery</a> -->
         <a href="contact.html">Contact</a>
         <a href="portal.html" class="portal-btn">Portal</a>
       </div>
@@ -458,11 +458,11 @@
                     ><i class="fas fa-angle-right"></i> Our Programmes</a
                   >
                 </li>
-                <li>
+                <!-- <li>
                   <a href="gallery.html"
                     ><i class="fas fa-angle-right"></i> Gallery</a
                   >
-                </li>
+                </li> -->
                 <li>
                   <a href="news.html"
                     ><i class="fas fa-angle-right"></i> News & Events</a
