--- a/primary.html
+++ b/primary.html
@@ -64,10 +64,9 @@
               </div>
             </div>
             <a href="primary.html" class="active">Primary</a>
-            <a href="curriculum.html">Curriculum</a>
           </div>
         </div>
-        <a href="gallery.html">Gallery</a>
+        <!-- <a href="gallery.html">Gallery</a> -->
         <a href="contact.html">Contact</a>
         <a href="portal.html" class="portal-btn">Student Portal</a>
       </div>
@@ -511,10 +510,7 @@
 
         <div class="assessment-container">
           <div class="assessment-image">
-            <img
-              src="assets/img/assessment.jpg"
-              alt="Student Assessment"
-            />
+            <img src="assets/img/assessment.jpg" alt="Student Assessment" />
           </div>
 
           <div class="assessment-content">
@@ -625,10 +621,7 @@
         <div class="activities-grid">
           <div class="activity-card">
             <div class="activity-image">
-              <img
-                src="assets/img/soccer club.jpg"
-                alt="Sports Activities"
-              />
+              <img src="assets/img/soccer club.jpg" alt="Sports Activities" />
             </div>
             <div class="activity-content">
               <h3>Sports</h3>
@@ -660,10 +653,7 @@
 
           <div class="activity-card">
             <div class="activity-image">
-              <img
-                src="assets/img/chess.jpg"
-                alt="Academic Clubs"
-              />
+              <img src="assets/img/chess.jpg" alt="Academic Clubs" />
             </div>
             <div class="activity-content">
               <h3>Academic Clubs</h3>
@@ -988,11 +978,11 @@
                     ><i class="fas fa-angle-right"></i> Our Programmes</a
                   >
                 </li>
-                <li>
+                <!-- <li>
                   <a href="gallery.html"
                     ><i class="fas fa-angle-right"></i> Gallery</a
                   >
-                </li>
+                </li> -->
                 <li>
                   <a href="news.html"
                     ><i class="fas fa-angle-right"></i> News & Events</a
