--- a/programme.html
+++ b/programme.html
@@ -52,7 +52,7 @@
             <a href="curriculum.html">Curriculum</a>
           </div>
         </div>
-        <a href="gallery.html">Gallery</a>
+        <!-- <a href="gallery.html">Gallery</a> -->
         <a href="contact.html">Contact</a>
         <a href="portal.html" class="portal-btn">Portal</a>
       </div>
@@ -530,11 +530,11 @@
                     ><i class="fas fa-angle-right"></i> Our Programmes</a
                   >
                 </li>
-                <li>
+                <!-- <li>
                   <a href="gallery.html"
                     ><i class="fas fa-angle-right"></i> Gallery</a
                   >
-                </li>
+                </li> -->
                 <li>
                   <a href="contact.html"
                     ><i class="fas fa-angle-right"></i> Contact Us</a
