worked on the primary page

--- a/primary.html
+++ b/primary.html
@@ -36,10 +36,10 @@
               alt="Franciscan Catholic School Logo"
           /></a>
         </div>
-        <span>Franciscan Catholic School</span>
+        <span>Franciscan Catholic Nursery and Primary School</span>
       </div>
       <div class="nav-items">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <div class="dropdown">
           <a href="about.html" class="dropdown-trigger"
             >About <i class="fas fa-chevron-down"></i
@@ -68,7 +68,7 @@
         </div>
         <!-- <a href="gallery.html">Gallery</a> -->
         <a href="contact.html">Contact</a>
-        <a href="portal.html" class="portal-btn">Student Portal</a>
+        <a href="portal.html" class="portal-btn">Portal</a>
       </div>
       <div class="hamburger">
         <span></span>
@@ -150,7 +150,7 @@
 
           <div class="curriculum-intro-image">
             <img
-              src="assets/img/curriculum moix.jpg"
+              src="assets/img/primarycurriculum.png"
               alt="Primary School Curriculum"
             />
           </div>
@@ -486,7 +486,7 @@
 
           <div class="teaching-approach-image">
             <img
-              src="assets/img/children learning.jpg"
+              src="assets/img/teaching approach.png"
               alt="Teaching Approach"
             />
           </div>
@@ -510,7 +510,7 @@
 
         <div class="assessment-container">
           <div class="assessment-image">
-            <img src="assets/img/assessment.jpg" alt="Student Assessment" />
+            <img src="assets/img/assessment.png" alt="Student Assessment" />
           </div>
 
           <div class="assessment-content">
@@ -596,7 +596,7 @@
     <!-- Assessment Section ends -->
 
     <!-- Extracurricular Activities Section begins -->
-    <section class="extracurricular-section">
+    <!-- <section class="extracurricular-section">
       <div class="container">
         <div class="section-header">
           <h2>Beyond the Classroom</h2>
@@ -696,11 +696,11 @@
           </p>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Extracurricular Activities Section ends -->
 
     <!-- Transition to Secondary Section begins -->
-    <section class="transition-secondary-section">
+    <!-- <section class="transition-secondary-section">
       <div class="container">
         <div class="transition-secondary-container">
           <div class="transition-secondary-content">
@@ -788,11 +788,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Transition to Secondary Section ends -->
 
     <!-- Parent Testimonials Section begins -->
-    <section class="testimonials-section">
+    <!-- <section class="testimonials-section">
       <div class="container">
         <div class="section-header">
           <h2>Parent Testimonials</h2>
@@ -869,7 +869,7 @@
           </button>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Parent Testimonials Section ends -->
 
     <!-- Enrollment CTA Section begins -->
@@ -884,10 +884,12 @@
               learning community.
             </p>
             <div class="cta-buttons">
-              <a href="admissions.html" class="cta-button"
-                >Begin Enrollment Process</a
+              <a href="contact.html#admission" class="cta-button"
+                >Begin Enrolment Process</a
               >
-              <a href="contact.html" class="btn-secondary">Schedule a Visit</a>
+              <a href="contact.html#appointment" class="cta-button"
+                >Schedule a Visit</a
+              >
             </div>
           </div>
         </div>
@@ -896,7 +898,7 @@
     <!-- Enrollment CTA Section ends -->
 
     <!-- Next Steps Section begins -->
-    <section class="next-steps-section">
+    <!-- <section class="next-steps-section">
       <div class="container">
         <div class="next-steps-container">
           <div class="next-step-card">
@@ -935,7 +937,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Next Steps Section ends -->
 
     <!-- Footer section begins -->
@@ -951,11 +953,11 @@
                     alt="Franciscan Catholic School Logo"
                   />
                 </div>
-                <h3>Franciscan Catholic School</h3>
+                <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
               <p>
-                Providing quality Catholic education since 1995. Building faith,
-                knowledge, and character in young minds.
+                Quality Catholic Education Rooted in Franciscan Values Since
+                2025.
               </p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -984,11 +986,6 @@
                   >
                 </li> -->
                 <li>
-                  <a href="news.html"
-                    ><i class="fas fa-angle-right"></i> News & Events</a
-                  >
-                </li>
-                <li>
                   <a href="contact.html"
                     ><i class="fas fa-angle-right"></i> Contact Us</a
                   >
@@ -1014,17 +1011,6 @@
                     ><i class="fas fa-angle-right"></i> Primary School</a
                   >
                 </li>
-                <li>
-                  <a href="afterschool.html"
-                    ><i class="fas fa-angle-right"></i> After School
-                    Programme</a
-                  >
-                </li>
-                <li>
-                  <a href="holiday.html"
-                    ><i class="fas fa-angle-right"></i> Holiday Programme</a
-                  >
-                </li>
               </ul>
             </div>
 
@@ -1032,16 +1018,13 @@
               <h4>Contact Information</h4>
               <ul>
                 <li>
-                  <i class="fas fa-map-marker-alt"></i> 15 Francis Avenue, Lekki
-                  Phase 1, Lagos, Nigeria
+                  <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
+                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li>
-                  <i class="fas fa-phone"></i> +234 803 456 7890, +234 802 345
-                  6789
-                </li>
+                <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
                 <li>
                   <i class="fas fa-envelope"></i>
-                  info@franciscancatholicschool.edu.ng
+                  info@franciscancatholicschool
                 </li>
                 <li>
                   <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
