worked on the corrections sent

--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
           <!-- Slide 1 -->
           <div class="slide active">
             <div class="slide-overlay"></div>
-            <img src="assets/img/new1.jpeg" alt="Students in classroom" />
+            <img src="assets/img/new1.jpeg" alt="Faith-based excellence" />
             <div class="slide-content">
               <h1>Faith-Based <span>Excellence</span></h1>
               <p>
@@ -114,11 +114,11 @@
           <!-- Slide 3 -->
           <div class="slide">
             <div class="slide-overlay"></div>
-            <img src="assets/img/new3.jpeg" alt="Students in activities" />
+            <img src="assets/img/new3.jpeg" alt="Building future leaders" />
             <div class="slide-content">
               <h1>Building <span>Future Leaders</span></h1>
               <p>
-                Empowering students with knowledge, faith, and values to become
+                Empowering learners with knowledge, faith, and values to become
                 tomorrow's innovative leaders.
               </p>
               <a href="contact.html" class="cta-button">Join Our Family</a>
@@ -161,9 +161,9 @@
 
         <div class="welcome-content">
           <div class="welcome-image">
-            <img src="assets/img/sister2.png" alt="School Principal" />
+            <img src="assets/img/sister3.jpg" alt="School Principal" />
             <div class="image-caption">
-              <p>Rev. Sr. Victoria Ogunwade</p>
+              <p>Rev. Sr. Victoria Mary Ogunwande OSF</p>
               <p class="caption-title">Provincial Superior</p>
             </div>
           </div>
@@ -174,14 +174,14 @@
               providing a nurturing environment where children can grow
               intellectually, spiritually, and socially. Founded on the
               principles of Catholic education and the Franciscan tradition, our
-              school offers a balanced curriculum that prepares students for
+              school offers a balanced curriculum that prepares learners for
               academic success while instilling strong moral values.
             </p>
             <p>
               Our dedicated staff are committed to recognizing each child's
               unique gifts and talents, fostering a love for learning that
               extends beyond the classroom. We invite you to explore what makes
-              our school community special.
+              our school community unique.
             </p>
             <a href="welcome.html" class="btn-secondary"
               >Provincial Superior's Welcome Note</a
@@ -215,7 +215,7 @@
             <h3>Faith</h3>
             <p>
               Deepening our relationship with God through daily prayer,
-              sacraments, and Franciscan spirituality, guiding students to live
+              sacraments, and Franciscan spirituality, guiding learners to live
               as Christ’s disciples.
             </p>
           </div>
@@ -224,10 +224,11 @@
             <div class="value-icon">
               <i class="fa-solid fa-hand-holding-heart"></i>
             </div>
-            <h3>Stewardship</h3>
+            <h3>Dedication</h3>
             <p>
-              Cultivating excellence in academics and character by nurturing
-              God-given talents for service to others and care for creation.
+              Excel academically and morally by honing God-given talents,
+              serving purposefully, and sustaining creation through
+              perseverance.
             </p>
           </div>
 
@@ -235,9 +236,9 @@
             <div class="value-icon">
               <i class="fas fa-hands-helping"></i>
             </div>
-            <h3>Solidarity</h3>
+            <h3>Compassion</h3>
             <p>
-              Building a compassionate community where students, families, and
+              Building a compassionate community where learners, families, and
               staff collaborate to uplift the marginalized and foster mutual
               dignity.
             </p>
@@ -276,7 +277,7 @@
         <div class="programmes-container">
           <div class="programme-card early-years">
             <div class="programme-content">
-              <h3>Early Years (Ages 1-4)</h3>
+              <h3>Early Years (Ages 1-5)</h3>
               <p>
                 A nurturing environment where young children develop
                 foundational skills through play-based learning and guided
@@ -284,19 +285,20 @@
               </p>
               <ul>
                 <li><i class="fas fa-check-circle"></i> Creche (Ages 1-2)</li>
-                <li><i class="fas fa-check-circle"></i> Pre-Nursery (Age 3)</li>
-                <li><i class="fas fa-check-circle"></i> Nursery (Age 4)</li>
+                <li><i class="fas fa-check-circle"></i> Pre-Nursery (Ages 2-3)</li>
+                <li><i class="fas fa-check-circle"></i> Nursery 1 (Ages 3-4)</li>
+                <li><i class="fas fa-check-circle"></i> Nursery 2 (Ages 4-5)</li>
               </ul>
               <a href="earlyyear.html" class="btn-programme">Learn More</a>
             </div>
             <div class="programme-image">
-              <img src="assets/img/new4.png" alt="Early Years Students" />
+              <img src="assets/img/new4.png" alt="Early Years Learners" />
             </div>
           </div>
 
           <div class="programme-card primary">
             <div class="programme-image">
-              <img src="assets/img/new5.png" alt="Primary Students" />
+              <img src="assets/img/new5.png" alt="Primary Learners" />
             </div>
             <div class="programme-content">
               <h3>Primary Education (Ages 5-11)</h3>
@@ -311,10 +313,6 @@
                 </li>
                 <li>
                   <i class="fas fa-check-circle"></i> Upper Primary (Ages 9-11)
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Special Enrichment
-                  Programs
                 </li>
               </ul>
               <a href="primary.html" class="btn-programme">Learn More</a>
@@ -416,14 +414,16 @@
         <div class="cta-content">
           <h2>Experience the Franciscan Difference</h2>
           <p>
-            Schedule a visit to our campus and see our nurturing learning
-            environment firsthand.
+            Schedule a visit to our school and see our nurturing learning
+            environment.
           </p>
           <div class="cta-buttons">
             <a href="contact.html#appointment" class="cta-button"
               >Book a Tour</a
             >
-            <button onclick="downloadProspectus()" class="btn-secondary">📄 Download Prospectus</button>
+            <button onclick="downloadProspectus()" class="btn-secondary">
+              📄 Download Prospectus
+            </button>
           </div>
         </div>
       </div>
@@ -522,8 +522,7 @@
                 <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
               <p>
-                Quality Catholic Education Rooted in Franciscan Values Since
-                2025.
+                Quality Catholic Education Rooted in Franciscan Values
               </p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -573,6 +572,11 @@
                   >
                 </li>
                 <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  >
+                </li>
+                <li>
                   <a href="primary.html"
                     ><i class="fas fa-angle-right"></i> Primary School</a
                   >
@@ -587,7 +591,7 @@
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
+                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
                 <li>
                   <i class="fas fa-envelope"></i>
                   info@franciscancatholicschool
