--- a/welcome.html
+++ b/welcome.html
@@ -82,7 +82,7 @@
       <div class="container">
         <h1>Welcome Note</h1>
         <div class="breadcrumb">
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
           <i class="fas fa-angle-right"></i>
           <a href="about.html">About</a>
           <i class="fas fa-angle-right"></i>
@@ -119,9 +119,9 @@
             <div class="welcome-note-content">
               <div class="welcome-note-body">
                 <div class="welcome-image">
-                  <img src="assets/img/sister2.png" alt="School Principal" />
+                  <img src="assets/img/sister3.jpg" alt="School Principal" />
                   <div class="image-caption">
-                    <p>Rev. Sr. Victoria Ogunwade</p>
+                    <p>Rev. Sr. Victoria Mary Ogunwande OSF</p>
                     <p class="caption-title">Provincial Superior</p>
                   </div>
                 </div>
@@ -162,13 +162,8 @@
                   </p>
                   <p class="cursive-closing">In Christ's service,</p>
                   <div class="signature-block">
-                    <img
-                      src="assets/img/signature.png"
-                      alt="Provincial Superior's Signature"
-                      class="signature"
-                    />
                     <p>
-                      <strong>Rev. Sr. Victoria Ogunwade</strong><br />
+                      <strong>Rev. Sr. Victoria Mary Ogunwande OSF</strong><br />
                       Provincial Superior
                     </p>
                   </div>
@@ -255,8 +250,8 @@
         <div class="cta-content">
           <h2>Experience the Franciscan Difference</h2>
           <p>
-            Schedule a visit to our campus and see our nurturing learning
-            environment firsthand.
+            Schedule a visit to our school and see our nurturing learning
+            environment.
           </p>
           <div class="cta-buttons">
             <a href="contact.html#appointment" class="cta-button"
@@ -287,8 +282,7 @@
                 <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
               <p>
-                Quality Catholic Education Rooted in Franciscan Values Since
-                2025.
+                Quality Catholic Education Rooted in Franciscan Values
               </p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -338,6 +332,11 @@
                   >
                 </li>
                 <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  >
+                </li>
+                <li>
                   <a href="primary.html"
                     ><i class="fas fa-angle-right"></i> Primary School</a
                   >
@@ -352,7 +351,7 @@
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
+                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
                 <li>
                   <i class="fas fa-envelope"></i>
                   info@franciscancatholicschool
