--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
       <div class="container">
         <h1>About Our School</h1>
         <div class="breadcrumb">
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
           <i class="fas fa-angle-right"></i>
           <span>About Us</span>
         </div>
@@ -107,27 +107,27 @@
         <div class="about-hero-content">
           <div class="about-hero-text">
             <p>
-              Since 2025, Franciscan Catholic School has been nurturing young
-              minds and shaping future leaders through a holistic education
+              Franciscan Catholic Nursery and Primary School is a school that nurtures young
+              minds and shapes future leaders through a holistic education
               rooted in Catholic values. Founded by the Franciscan Sisters of
               the Immaculate Conception, our school began with a vision to
               provide quality education that develops not only academic
               excellence but also spiritual growth and character formation.
             </p>
-            <p>
+            <!-- <p>
               Over the years, we have grown from a small parish school to a
               respected educational institution, while maintaining our
               commitment to personalized attention and a supportive learning
               environment. Our dedicated staff, many of whom have been with us
               for over a decade, create a family atmosphere where every child
               feels valued and encouraged to reach their full potential.
-            </p>
+            </p> -->
             <p>
-              Today, Franciscan Catholic School continues to build on its rich
+              Franciscan Catholic Nursery and Primary School hopes to continue to build on its rich Franciscan
               tradition while embracing innovative teaching methods to prepare
-              students for the challenges of the 21st century. Our graduates
+              students for the challenges of the 21st century. <!-- Our graduates
               consistently demonstrate not only academic achievement but also
-              strong moral character and a commitment to service.
+              strong moral character and a commitment to service. -->
             </p>
           </div>
           <!-- <div class="about-stats">
@@ -465,8 +465,8 @@
         <div class="cta-content">
           <h2>Experience the Franciscan Difference</h2>
           <p>
-            Schedule a visit to our campus and see our nurturing learning
-            environment firsthand.
+            Schedule a visit to our school and see our nurturing learning
+            environment.
           </p>
           <div class="cta-buttons">
             <a href="contact.html#appointment" class="cta-button"
@@ -497,8 +497,7 @@
                 <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
               <p>
-                Quality Catholic Education Rooted in Franciscan Values Since
-                2025.
+                Quality Catholic Education Rooted in Franciscan Values
               </p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -527,11 +526,6 @@
                   >
                 </li> -->
                 <li>
-                  <a href="news.html"
-                    ><i class="fas fa-angle-right"></i> News & Events</a
-                  >
-                </li>
-                <li>
                   <a href="contact.html"
                     ><i class="fas fa-angle-right"></i> Contact Us</a
                   >
@@ -553,19 +547,13 @@
                   >
                 </li>
                 <li>
+                  <a href="preschool.html"
+                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  >
+                </li>
+                <li>
                   <a href="primary.html"
                     ><i class="fas fa-angle-right"></i> Primary School</a
-                  >
-                </li>
-                <li>
-                  <a href="afterschool.html"
-                    ><i class="fas fa-angle-right"></i> After School
-                    Programme</a
-                  >
-                </li>
-                <li>
-                  <a href="holiday.html"
-                    ><i class="fas fa-angle-right"></i> Holiday Programme</a
                   >
                 </li>
               </ul>
@@ -576,9 +564,9 @@
               <ul>
                 <li>
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
-                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria
+                  Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
+                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
                 <li>
                   <i class="fas fa-envelope"></i>
                   info@franciscancatholicschool
